--- a/SD/SDGC/sky/templates/sky/engineerSummary.html
+++ b/SD/SDGC/sky/templates/sky/engineerSummary.html
@@ -1,5 +1,10 @@
 <!-- By Callum Walters w1828868 -->
 
+<!--
+  Vote data is currently simulated for demo purposes. A Django model (Vote) has been created to store real votes in db.sqlite3.
+  (Back-end vote recording is part of a teammate’s task and not yet completed/merged.)
+-->
+
 {% load static %}
 
 <!DOCTYPE html>
