--- a/SD/SDGC/sky/templates/sky/seniorManagerSummary.html
+++ b/SD/SDGC/sky/templates/sky/seniorManagerSummary.html
@@ -1,4 +1,4 @@
-<!--- By Callum Walters w1828868-->
+<!--- Authored by Callum Walters w1828868-->
 
 <!--
   Vote data is currently simulated for demo purposes. A Django model (Vote) has been created to store real votes in db.sqlite3.
